==> MIDMX/RaVisual/lib/middleware/webserver/lwip/stm32f4x7_eth_bsp.c <==
#include "defines.h"
#include "lwip/opt.h"
#include "stm32f4_gpio.h"
#include "stm32f4x7_eth.h"
#include "stm32f4x7_eth_bsp.h"
#include "netif.h"
#include "netconf.h"
#include "lwip/dhcp.h"
#include "tm_stm32f4_ethernet.h"
#include "stm32f4xx_hal.h"
#include "stm32f4_sys.h"
#define GET_PHY_LINK_STATUS()		(ETH_ReadPHYRegister(ETHERNET_PHY_ADDRESS, PHY_BSR) & 0x00000004)

uint8_t ETH_BSP_Config(void) {	
	
	/* Configure the GPIO ports for ethernet pins */
	ETH_GPIO_Config();


	/* Configure the Ethernet MAC/DMA */
	ETH_MACDMA_Config();

	/* Get Ethernet link status*/
	if (GET_PHY_LINK_STATUS()) {
		/* Check if LINK is up */
		EthStatus |= ETH_LINK_FLAG;
	}
	
	/* Call user function for specific PHY settings */
	/* User can do stuff in this function */
	/* For example, on DP83848 you can change led behaviour */
	TM_ETHERNET_INT_CustomOptions(ETHERNET_PHY_ADDRESS);
	
	/* Return Eternet status */
	return EthStatus;
}

static void ETH_MACDMA_Config(void) {
	/* Enable ETHERNET clock  */
	RCC->AHB1ENR |= RCC_AHB1ENR_ETHMACEN;
	RCC->AHB1ENR |= RCC_AHB1ENR_ETHMACRXEN;
	RCC->AHB1ENR |= RCC_AHB1ENR_ETHMACTXEN;

	/* Reset ETHERNET on AHB Bus */
	ETH_DeInit();

	/* Software reset */
	ETH_SoftwareReset();

	/* Wait for software reset */

	uint32_t tickstart = HAL_GetTick();
	while (ETH_GetSoftwareResetStatus() == SET)
	{
		if((HAL_GetTick() - tickstart ) > 100)
		{
			printf("Timeout waiting software reset of Ethernet. Check the baseboard is plugged?\n");
			break;
		}
	}

	/* ETHERNET Configuration --------------------------------------------------*/
	/* Call ETH_StructInit if you don't like to configure all ETH_InitStructure parameter */
	ETH_StructInit(&ETH_InitStructure);

	/* Fill ETH_InitStructure parametrs */
	/*------------------------   MAC   -----------------------------------*/
	ETH_InitStructure.ETH_AutoNegotiation = ETH_AutoNegotiation_Enable;
	ETH_InitStructure.ETH_LoopbackMode = ETH_LoopbackMode_Disable;
	ETH_InitStructure.ETH_RetryTransmission = ETH_RetryTransmission_Disable;
	ETH_InitStructure.ETH_AutomaticPadCRCStrip = ETH_AutomaticPadCRCStrip_Disable;
	ETH_InitStructure.ETH_ReceiveAll = ETH_ReceiveAll_Disable;
	ETH_InitStructure.ETH_BroadcastFramesReception = ETH_BroadcastFramesReception_Enable;
	ETH_InitStructure.ETH_PromiscuousMode = ETH_PromiscuousMode_Disable;
	ETH_InitStructure.ETH_MulticastFramesFilter = ETH_MulticastFramesFilter_Perfect;
	ETH_InitStructure.ETH_UnicastFramesFilter = ETH_UnicastFramesFilter_Perfect;
#ifdef CHECKSUM_BY_HARDWARE
	ETH_InitStructure.ETH_ChecksumOffload = ETH_ChecksumOffload_Enable;
#endif

	/*------------------------   DMA   -----------------------------------*/  
	/* When we use the Checksum offload feature, we need to enable the Store and Forward mode: 
	the store and forward guarantee that a whole frame is stored in the FIFO, so the MAC can insert/verify the checksum, 
	if the checksum is OK the DMA can handle the frame otherwise the frame is dropped */
	ETH_InitStructure.ETH_DropTCPIPChecksumErrorFrame = ETH_DropTCPIPChecksumErrorFrame_Enable; 
	ETH_InitStructure.ETH_ReceiveStoreForward = ETH_ReceiveStoreForward_Enable;
	ETH_InitStructure.ETH_TransmitStoreForward = ETH_TransmitStoreForward_Enable;

	ETH_InitStructure.ETH_ForwardErrorFrames = ETH_ForwardErrorFrames_Disable;
	ETH_InitStructure.ETH_ForwardUndersizedGoodFrames = ETH_ForwardUndersizedGoodFrames_Disable;
	ETH_InitStructure.ETH_SecondFrameOperate = ETH_SecondFrameOperate_Enable;
	ETH_InitStructure.ETH_AddressAlignedBeats = ETH_AddressAlignedBeats_Enable;
	ETH_InitStructure.ETH_FixedBurst = ETH_FixedBurst_Enable;
	ETH_InitStructure.ETH_RxDMABurstLength = ETH_RxDMABurstLength_32Beat;
	ETH_InitStructure.ETH_TxDMABurstLength = ETH_TxDMABurstLength_32Beat;
	ETH_InitStructure.ETH_DMAArbitration = ETH_DMAArbitration_RoundRobin_RxTx_2_1;

	/* Configure Ethernet */
	EthStatus = ETH_Init(&ETH_InitStructure, ETHERNET_PHY_ADDRESS);
}

void ETH_GPIO_Config(void)
{
	/* Enable SYSCFG clock */
	RCC->APB2ENR |= RCC_APB2ENR_SYSCFGEN;

	/* Configure MCO1 (PA8) */
	/* This pin must be initialized as MCO, but not needed to be used */
	/* It looks like a bug in STM32F4 */
	/* Init alternate function for PA8 = MCO */
	BSP_GPIO_PinCfg(GPIOA, GPIO_PIN_8, GPIO_MODE_AF_PP, GPIO_NOPULL, GPIO_SPEED_FAST, 0);

#ifdef ETHERNET_MCO_CLOCK
	/* Set PA8 output HSE value */
	HAL_RCC_MCOConfig(RCC_MCO1,RCC_MCO1SOURCE_HSE,RCC_MCODIV_1);
#endif

#ifdef ETHERNET_MII_MODE
	/* MII Media interface selection */
	*(__IO uint32_t *) PMC_MII_RMII_SEL_BB = SYSCFG_ETH_MediaInterface_MII;
#else
	/* RMII Media interface selection */
	*(__IO uint32_t *) PMC_MII_RMII_SEL_BB = SYSCFG_ETH_MediaInterface_RMII;
#endif
	/* Check if user has defined it's own pins */
	if (!TM_ETHERNET_InitPinsCallback()) {
#ifdef ETHERNET_MII_MODE
		/* GPIOA                     REF_CLK      MDIO         RX_DV */
		BSP_GPIO_PinCfg(GPIOA, GPIO_PIN_1 | GPIO_PIN_2 | GPIO_PIN_7								, GPIO_MODE_AF_PP, GPIO_NOPULL, GPIO_SPEED_HIGH, GPIO_AF11_ETH);
		/* GPIOB                     PPS_PUT      TDX3 */
		BSP_GPIO_PinCfg(GPIOB, GPIO_PIN_5 | GPIO_PIN_8											, GPIO_MODE_AF_PP, GPIO_NOPULL, GPIO_SPEED_HIGH, GPIO_AF11_ETH);
		/* GPIOC                     MDC          TDX2         TX_CLK       RXD0         RXD1 */
		BSP_GPIO_PinCfg(GPIOC, GPIO_PIN_1 | GPIO_PIN_2	| GPIO_PIN_3 | GPIO_PIN_4 | GPIO_PIN_5	, GPIO_MODE_AF_PP, GPIO_NOPULL, GPIO_SPEED_HIGH, GPIO_AF11_ETH);
		/* GPIOG                     TX_EN         TXD0          TXD1 */
		BSP_GPIO_PinCfg(GPIOG, GPIO_PIN_11 | GPIO_PIN_13	| GPIO_PIN_14						, GPIO_MODE_AF_PP, GPIO_NOPULL, GPIO_SPEED_HIGH, GPIO_AF11_ETH);
		/* GPIOH                     CRS          COL          RDX2         RXD3 */
		BSP_GPIO_PinCfg(GPIOH, GPIO_PIN_2 | GPIO_PIN_3	| GPIO_PIN_6 | GPIO_PIN_7				, GPIO_MODE_AF_PP, GPIO_NOPULL, GPIO_SPEED_HIGH, GPIO_AF11_ETH);
		/* GPIOI                     RX_ER */
		BSP_GPIO_PinCfg(GPIOI, GPIO_PIN_10 														, GPIO_MODE_AF_PP, GPIO_NOPULL, GPIO_SPEED_HIGH, GPIO_AF11_ETH);
#else	/* RMII */
		/* Init default pins */
		/* Ethernet pins configuration */
		BSP_GPIO_PinCfg(GPIOA, GPIO_PIN_1 | GPIO_PIN_2 | GPIO_PIN_7, GPIO_MODE_AF_PP, GPIO_NOPULL, GPIO_SPEED_HIGH, GPIO_AF11_ETH);

		/* RX pins and MDC */
		BSP_GPIO_PinCfg(GPIOC, GPIO_PIN_1 | GPIO_PIN_4 | GPIO_PIN_5, GPIO_MODE_AF_PP, GPIO_NOPULL, GPIO_SPEED_HIGH, GPIO_AF11_ETH);

		/* Check TX pins */
#ifdef ETHERNET_RMII_PINSPACK_2
		/* Pinspack 2, TXD0, TXD1 and TX_EN pins are connected to GPIOG pins */
		BSP_GPIO_PinCfg(GPIOG, GPIO_PIN_11 | GPIO_PIN_13 | GPIO_PIN_14, GPIO_MODE_AF_PP, GPIO_NOPULL, GPIO_SPEED_HIGH, GPIO_AF11_ETH);
#else
		/* Pinspack 1, TXD0, TXD1 and TX_EN pins are connected to GPIOB pins */
		BSP_GPIO_PinCfg(GPIOB, GPIO_PIN_11 | GPIO_PIN_12 | GPIO_PIN_13, GPIO_MODE_AF_PP, GPIO_NOPULL, GPIO_SPEED_HIGH, GPIO_AF11_ETH);
#endif /* RMII pinspack 2 */
#endif /* ETHERNET_USE_MII */

		BSP_GPIO_PinCfg(GPIOE, GPIO_PIN_2, GPIO_MODE_OUTPUT_PP, GPIO_PULLUP, GPIO_SPEED_FAST, 0);

		HAL_GPIO_WritePin(GPIOE, GPIO_PIN_2, 0);
		volatile int i;
		for (i = 0; i < 20000; i++);
		HAL_GPIO_WritePin(GPIOE, GPIO_PIN_2, 1);
		for (i = 0; i < 20000; i++);
	}
}
